--- a/pom.xml
+++ b/pom.xml
@@ -142,6 +142,12 @@
       <artifactId>commons-logging</artifactId>
       <version>1.1.3</version>
     </dependency>
+<!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
+<dependency>
+    <groupId>javax.xml.bind</groupId>
+    <artifactId>jaxb-api</artifactId>
+    <version>2.3.1</version>
+</dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-core</artifactId>
@@ -183,13 +189,18 @@
     </dependency>
   </dependencies>
 
-  <distributionManagement>
-    <site>
-      <id>apache.website</id>
-      <name>Apache Commons Site</name>
-      <url>scm:svn:https://svn.apache.org/repos/infra/websites/production/commons/content/proper/commons-scxml/</url>
-    </site>
-  </distributionManagement>
+    <distributionManagement>
+        <snapshotRepository>
+            <id>artifactory</id>
+            <name>tact-snapshots</name>
+            <url>https://tact.jfrog.io/tact/maven-snapshots</url>
+        </snapshotRepository>
+        <repository>
+            <id>artifactory</id>
+            <name>tact-releases</name>
+            <url>https://tact.jfrog.io/tact/maven-releases</url>
+        </repository>
+    </distributionManagement>
 
   <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
